--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-sharp": "^3.6.0",
     "gatsby-plugin-typegen": "^2.2.4",
     "gatsby-source-filesystem": "^3.6.0",
+    "gatsby-transformer-remark": "^4.4.1",
     "gatsby-transformer-sharp": "^3.6.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
