--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "gatsby-plugin-manifest": "^3.6.0",
     "gatsby-plugin-offline": "^4.6.0",
     "gatsby-plugin-react-helmet": "^4.6.0",
-    "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-plugin-sharp": "^3.7.1",
     "gatsby-plugin-typegen": "^2.2.4",
+    "gatsby-remark-autolink-headers": "^4.4.1",
+    "gatsby-remark-images": "^5.4.1",
+    "gatsby-remark-prismjs": "^5.4.1",
+    "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-filesystem": "^3.6.0",
     "gatsby-transformer-remark": "^4.4.1",
     "gatsby-transformer-sharp": "^3.6.0",
+    "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
