--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "author": "",
   "dependencies": {
+    "@types/react-helmet": "^6.1.1",
     "gatsby": "^3.6.2",
     "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-manifest": "^3.6.0",
