--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-offline": "^4.6.0",
     "gatsby-plugin-react-helmet": "^4.6.0",
     "gatsby-plugin-sharp": "^3.7.1",
+    "gatsby-plugin-sitemap": "^4.3.1",
     "gatsby-plugin-typegen": "^2.2.4",
     "gatsby-remark-autolink-headers": "^4.4.1",
     "gatsby-remark-images": "^5.4.1",
