--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "description": "",
   "author": "",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "@types/react-helmet": "^6.1.1",
     "gatsby": "^3.6.2",
     "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-manifest": "^3.6.0",
+    "gatsby-plugin-material-ui": "^3.0.1",
     "gatsby-plugin-offline": "^4.6.0",
     "gatsby-plugin-react-helmet": "^4.6.0",
     "gatsby-plugin-sharp": "^3.7.1",
@@ -19,6 +21,7 @@
     "gatsby-remark-prismjs": "^5.4.1",
     "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-filesystem": "^3.6.0",
+    "gatsby-theme-material-ui": "^2.0.1",
     "gatsby-transformer-remark": "^4.4.1",
     "gatsby-transformer-sharp": "^3.6.0",
     "prismjs": "^1.23.0",
