--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "rehype-react": "^6.2.0",
     "ts-node": "^9.1.1"
   },
   "devDependencies": {
