--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
+    "babel-plugin-import": "^1.13.3",
+    "babel-preset-gatsby": "^1.8.0",
     "prettier": "2.2.1",
     "typescript": "^4.3.2"
   },
