--- a/package.json
+++ b/package.json
@@ -28,21 +28,22 @@
     "gatsby-transformer-sharp": "^3.6.0",
     "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "rehype-react": "^6.2.0",
+    "rehype-react": "^6.2.1",
     "sass": "^1.35.1",
     "ts-node": "^9.1.1"
   },
   "devDependencies": {
-    "@types/node": "^15.12.2",
+    "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.7",
+    "@types/react-dom": "^17.0.8",
     "babel-plugin-import": "^1.13.3",
     "babel-preset-gatsby": "^1.8.0",
+    "npm-check-updates": "^11.7.1",
     "prettier": "2.2.1",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.4"
   },
   "keywords": [
     "gatsby"
