--- a/package.json
+++ b/package.json
@@ -39,8 +39,14 @@
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "babel-plugin-import": "^1.13.3",
     "babel-preset-gatsby": "^1.8.0",
+    "eslint": "^7.29.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-react": "^7.24.0",
+    "gatsby-plugin-eslint": "^3.0.0",
     "npm-check-updates": "^11.7.1",
     "prettier": "2.2.1",
     "typescript": "^4.3.4"
