--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@types/react-helmet": "^6.1.1",
+    "autoprefixer": "^10.2.6",
     "gatsby": "^3.6.2",
     "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-manifest": "^3.6.0",
@@ -32,6 +33,7 @@
     "react-helmet": "^6.1.0",
     "rehype-react": "^6.2.1",
     "sass": "^1.35.1",
+    "tailwindcss": "^2.2.4",
     "ts-node": "^9.1.1"
   },
   "devDependencies": {
