--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
-  "include": ["./src/**/*.ts", "./src/**/*.tsx"],
+  "include": [
+    "./src/**/*.ts",
+    "./src/**/*.tsx",
+    "./src/templates/page.module.scss.d.ts"
+  ],
   "compilerOptions": {
     "target": "esnext",
     "jsx": "react",
