--- a/package.json
+++ b/package.json
@@ -29,20 +29,24 @@
     "gatsby-transformer-remark": "^4.4.1",
     "gatsby-transformer-sharp": "^3.6.0",
     "gray-matter": "^4.0.3",
+    "hast-util-to-string": "^1.0.4",
     "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "refractor": "^4.1.0",
     "rehype-react": "^6.2.1",
     "remark-parse": "^6.0.3",
     "remark-rehype": "^8.1.0",
     "sass": "^1.35.1",
     "tailwindcss": "^2.2.4",
     "ts-node": "^9.1.1",
-    "unified": "^8.4.2"
+    "unified": "^8.4.2",
+    "unist-util-visit": "^2.0.3"
   },
   "devDependencies": {
+    "@types/hast": "^2.3.1",
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
