--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "gatsby-source-filesystem": "^3.6.0",
     "gatsby-transformer-remark": "^4.4.1",
     "gatsby-transformer-sharp": "^3.6.0",
+    "github-slugger": "^1.3.0",
     "gray-matter": "^4.0.3",
     "hast-util-to-string": "^1.0.4",
+    "hastscript": "^6.0.0",
     "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -46,6 +48,7 @@
     "unist-util-visit": "^2.0.3"
   },
   "devDependencies": {
+    "@types/github-slugger": "^1.3.0",
     "@types/hast": "^2.3.1",
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
