use GatsbyImage when rendering on client

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/unist": "^2.0.3",
     "autoprefixer": "^10.2.6",
     "buffer": "^5.7.1",
+    "cheerio": "^1.0.0-rc.10",
     "gatsby": "^3.6.2",
     "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-manifest": "^3.6.0",
@@ -32,12 +33,15 @@
     "gray-matter": "^4.0.3",
     "hast-util-to-string": "^1.0.4",
     "hastscript": "^6.0.0",
+    "mdast-util-definitions": "^4.0.0",
+    "path-browserify": "^1.0.1",
     "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "refractor": "^4.1.0",
+    "rehype-raw": "^5.1.0",
     "rehype-react": "^6.2.1",
     "remark-parse": "^6.0.3",
     "remark-rehype": "^8.1.0",
