--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "unist-util-visit": "^3.1.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.14.8",
     "@types/github-slugger": "^1.3.0",
     "@types/hast": "^2.3.2",
     "@types/node": "^16.3.1",
