--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "dependencies": {
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@octokit/core": "^3.5.1",
+    "@octokit/plugin-rest-endpoint-methods": "^5.5.1",
     "@types/react-helmet": "^6.1.2",
     "@types/unist": "^2.0.5",
     "autoprefixer": "^10.3.1",
