--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@octokit/core": "^3.5.1",
     "@octokit/plugin-rest-endpoint-methods": "^5.5.1",
+    "@reduxjs/toolkit": "^1.6.1",
     "@types/react-helmet": "^6.1.2",
     "@types/unist": "^2.0.5",
     "autoprefixer": "^10.3.1",
@@ -39,6 +40,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
     "refractor": "^4.1.0",
     "rehype-raw": "^5.1.0",
     "rehype-react": "^6.2.1",
