--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "gatsby-mysite",
-  "private": true,
+  "name": "gatsby-theme-kibun",
   "version": "1.0.0",
   "description": "",
   "author": "",
@@ -74,7 +73,8 @@
     "typescript": "^4.3.5"
   },
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "gatsby-plugin"
   ],
   "license": "0BSD",
   "scripts": {
