--- a/package.json
+++ b/package.json
@@ -1,92 +1,11 @@
 {
-  "name": "gatsby-theme-kibun",
+  "name": "root",
   "version": "1.0.0",
-  "description": "",
-  "author": "",
-  "dependencies": {
-    "@material-ui/core": "^4.12.1",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
-    "@octokit/core": "^3.5.1",
-    "@octokit/plugin-rest-endpoint-methods": "^5.5.1",
-    "@reduxjs/toolkit": "^1.6.1",
-    "@types/react-helmet": "^6.1.2",
-    "@types/unist": "^2.0.5",
-    "autoprefixer": "^10.3.1",
-    "buffer": "^6.0.3",
-    "cheerio": "^1.0.0-rc.10",
-    "esm": "github:agoric-labs/esm#Agoric-built",
-    "gatsby": "^3.9.1",
-    "gatsby-plugin-image": "^1.9.0",
-    "gatsby-plugin-manifest": "^3.9.0",
-    "gatsby-plugin-material-ui": "^3.0.1",
-    "gatsby-plugin-offline": "^4.9.0",
-    "gatsby-plugin-react-helmet": "^4.9.0",
-    "gatsby-plugin-sass": "^4.9.0",
-    "gatsby-plugin-sharp": "^3.9.0",
-    "gatsby-plugin-sitemap": "^4.5.0",
-    "gatsby-plugin-typegen": "^2.2.4",
-    "gatsby-source-filesystem": "^3.9.0",
-    "gatsby-transformer-sharp": "^3.9.0",
-    "github-slugger": "^1.3.0",
-    "gray-matter": "^4.0.3",
-    "hast-util-to-string": "^1.0.4",
-    "hastscript": "^7.0.1",
-    "mdast-util-definitions": "^5.0.0",
-    "path-browserify": "^1.0.1",
-    "prismjs": "^1.24.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "react-redux": "^7.2.4",
-    "redux": "^4.1.0",
-    "refractor": "^4.1.0",
-    "rehype-raw": "^5.1.0",
-    "rehype-react": "^6.2.1",
-    "remark-parse": "^9.0.0",
-    "remark-rehype": "^8.1.0",
-    "sass": "^1.35.2",
-    "tailwindcss": "^2.2.4",
-    "ts-node": "^10.1.0",
-    "unified": "^9.2.1",
-    "unist-util-visit": "^3.1.0"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.14.8",
-    "@types/github-slugger": "^1.3.0",
-    "@types/hast": "^2.3.2",
-    "@types/node": "^16.3.1",
-    "@types/react": "^17.0.14",
-    "@types/react-dom": "^17.0.9",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
-    "babel-plugin-import": "^1.13.3",
-    "babel-preset-gatsby": "^1.9.0",
-    "eslint": "^7.30.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-react": "^7.24.0",
-    "gatsby-plugin-eslint": "^3.0.0",
-    "npm-check-updates": "^11.8.2",
-    "prettier": "2.3.2",
-    "typescript": "^4.3.5"
-  },
-  "keywords": [
-    "gatsby",
-    "gatsby-plugin"
+  "private": true,
+  "workspaces": [
+    "gatsby-theme-kibun",
+    "example"
   ],
-  "license": "0BSD",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "typecheck": "tsc",
-    "lint": "eslint ./src/**/*.{ts,tsx,js,jsx}",
-    "lint-fix": "eslint --fix ./src/**/*.{ts,tsx,js,jsx} && prettier --write ./src/**/*.{ts,tsx,js,jsx}",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+  "dependencies": {
   }
 }
