--- a/gatsby-theme-kibun/package.json
+++ b/gatsby-theme-kibun/package.json
@@ -1,8 +1,9 @@
 {
   "name": "gatsby-theme-kibun",
   "version": "1.0.0",
-  "description": "",
-  "author": "",
+  "description": "Gatsby theme for building wiki-like editable website backed by GitHub",
+  "author": "Wataru Watanabe",
+  "main": "index.js",
   "dependencies": {
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
@@ -16,7 +17,6 @@
     "buffer": "^6.0.3",
     "cheerio": "^1.0.0-rc.10",
     "esm": "github:agoric-labs/esm#Agoric-built",
-    "gatsby": "^3.9.1",
     "gatsby-plugin-image": "^1.9.0",
     "gatsby-plugin-manifest": "^3.9.0",
     "gatsby-plugin-material-ui": "^3.0.1",
@@ -35,9 +35,6 @@
     "mdast-util-definitions": "^5.0.0",
     "path-browserify": "^1.0.1",
     "prismjs": "^1.24.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
@@ -68,15 +65,23 @@
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-react": "^7.24.0",
     "gatsby-plugin-eslint": "^3.0.0",
-    "npm-check-updates": "^11.8.2",
     "prettier": "2.3.2",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "babel-eslint": "^10.1.0",
+    "gatsby": "^3.10.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "peerDependencies": {
+    "gatsby": ">=3.7.0",
+    "react": ">=17.0.0",
+    "react-dom": ">=17.0.0"
   },
   "keywords": [
     "gatsby",
     "gatsby-plugin"
   ],
-  "license": "0BSD",
+  "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
