--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "root",
   "version": "1.0.0",
   "private": true,
+  "license": "MIT",
   "workspaces": [
     "gatsby-theme-kibun",
     "example"
   ],
   "dependencies": {
+  },
+  "devDependencies": {
+    "npm-check-updates": "^11.8.2"
   }
 }
