--- a/gatsby-theme-kibun/package.json
+++ b/gatsby-theme-kibun/package.json
@@ -33,6 +33,7 @@
     "hast-util-to-string": "^1.0.4",
     "hastscript": "^7.0.1",
     "mdast-util-definitions": "^5.0.0",
+    "mkdirp": "^0.5.5",
     "path-browserify": "^1.0.1",
     "prismjs": "^1.24.1",
     "react-helmet": "^6.1.0",
@@ -58,19 +59,19 @@
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.3",
     "babel-preset-gatsby": "^1.9.0",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-react": "^7.24.0",
+    "gatsby": "^3.10.2",
     "gatsby-plugin-eslint": "^3.0.0",
     "prettier": "2.3.2",
-    "typescript": "^4.3.5",
-    "babel-eslint": "^10.1.0",
-    "gatsby": "^3.10.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "typescript": "^4.3.5"
   },
   "peerDependencies": {
     "gatsby": ">=3.7.0",
