--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "example"
   ],
   "devDependencies": {
+    "@types/js-yaml": "^4.0.2",
     "npm-check-updates": "^11.8.2"
+  },
+  "dependencies": {
+    "js-yaml": "^3.14.1"
   }
 }
