--- a/example/package.json
+++ b/example/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "gatsby": "^3.10.2",
     "gatsby-theme-kibun": "*",
+    "gatsby-plugin-sitemap": "^4.5.0",
+    "gatsby-plugin-manifest": "^3.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
