--- a/gatsby-theme-kibun/package.json
+++ b/gatsby-theme-kibun/package.json
@@ -29,6 +29,7 @@
     "gray-matter": "^4.0.3",
     "hast-util-to-string": "^1.0.4",
     "hastscript": "^7.0.1",
+    "js-yaml": "^4.1.0",
     "mdast-util-definitions": "^5.0.0",
     "mkdirp": "^0.5.5",
     "path-browserify": "^1.0.1",
@@ -36,7 +37,7 @@
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
-    "refractor": "^4.1.0",
+    "refractor": "^4.1.1",
     "rehype-raw": "^5.1.0",
     "rehype-react": "^6.2.1",
     "remark-parse": "^9.0.0",
@@ -51,6 +52,7 @@
     "@babel/cli": "^7.14.8",
     "@types/github-slugger": "^1.3.0",
     "@types/hast": "^2.3.2",
+    "@types/js-yaml": "^4.0.2",
     "@types/node": "^16.3.1",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
