--- a/gatsby-theme-kibun/package.json
+++ b/gatsby-theme-kibun/package.json
@@ -30,21 +30,22 @@
     "hast-util-to-string": "^2.0.0",
     "hastscript": "^7.0.1",
     "js-yaml": "^4.1.0",
-    "mdast-util-definitions": "^5.0.0",
+    "mdast-util-definitions": "^5.1.0",
+    "mdast-util-to-hast": "^11.2.0",
     "path-browserify": "^1.0.1",
     "prismjs": "^1.24.1",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
     "refractor": "^4.1.1",
-    "rehype-raw": "^5.1.0",
+    "rehype-raw": "^6.0.0",
     "rehype-react": "^6.2.1",
     "remark-parse": "^9.0.0",
-    "remark-rehype": "^8.1.0",
+    "remark-rehype": "^9.0.0",
     "sass": "^1.37.5",
     "tailwindcss": "^2.2.7",
     "ts-node": "^10.2.0",
-    "unified": "^9.2.1",
+    "unified": "^10.1.0",
     "unist-util-visit": "^3.1.0"
   },
   "devDependencies": {
