--- a/gatsby-theme-kibun/package.json
+++ b/gatsby-theme-kibun/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.6.1",
     "@types/react-helmet": "^6.1.2",
     "@types/unist": "^2.0.5",
+    "assert": "^2.0.0",
     "autoprefixer": "^10.3.1",
     "buffer": "^6.0.3",
     "cheerio": "^1.0.0-rc.10",
@@ -40,7 +41,7 @@
     "refractor": "^4.1.1",
     "rehype-raw": "^6.0.0",
     "rehype-react": "^6.2.1",
-    "remark-parse": "^9.0.0",
+    "remark-parse": "^10.0.0",
     "remark-rehype": "^9.0.0",
     "sass": "^1.37.5",
     "tailwindcss": "^2.2.7",
