--- a/gatsby-theme-kibun/package.json
+++ b/gatsby-theme-kibun/package.json
@@ -33,6 +33,7 @@
     "js-yaml": "^4.1.0",
     "mdast-util-definitions": "^5.1.0",
     "mdast-util-to-hast": "^11.2.0",
+    "micromark": "^3.0.0",
     "path-browserify": "^1.0.1",
     "prismjs": "^1.24.1",
     "react-helmet": "^6.1.0",
@@ -71,7 +72,8 @@
     "prettier": "2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "unist-util-inspect": "^7.0.0"
   },
   "peerDependencies": {
     "gatsby": ">=3.7.0",
