--- a/gatsby-theme-kibun/package.json
+++ b/gatsby-theme-kibun/package.json
@@ -52,8 +52,10 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
+    "@babel/plugin-transform-modules-commonjs": "^7.15.0",
     "@types/github-slugger": "^1.3.0",
     "@types/hast": "^2.3.2",
+    "@types/jest": "^27.0.1",
     "@types/js-yaml": "^4.0.2",
     "@types/node": "^16.6.1",
     "@types/react": "^17.0.18",
@@ -61,6 +63,7 @@
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.0.6",
     "babel-plugin-import": "^1.13.3",
     "babel-preset-gatsby": "^1.11.0",
     "eslint": "^7.32.0",
@@ -69,9 +72,11 @@
     "eslint-plugin-react": "^7.24.0",
     "gatsby": "^3.10.2",
     "gatsby-plugin-eslint": "^3.0.0",
+    "jest": "^27.0.6",
     "prettier": "2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.3.5",
     "unist-util-inspect": "^7.0.0"
   },
@@ -95,6 +100,6 @@
     "typecheck": "tsc",
     "lint": "eslint ./src/**/*.{ts,tsx,js,jsx}",
     "lint-fix": "eslint --fix ./src/**/*.{ts,tsx,js,jsx} && prettier --write ./src/**/*.{ts,tsx,js,jsx}",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "jest"
   }
 }
