--- a/gatsby-theme-kibun/package.json
+++ b/gatsby-theme-kibun/package.json
@@ -42,6 +42,7 @@
     "refractor": "^4.1.1",
     "rehype-raw": "^6.0.0",
     "rehype-react": "^7.0.0",
+    "remark-definition-list": "^1.1.0",
     "remark-parse": "^10.0.0",
     "remark-rehype": "^9.0.0",
     "sass": "^1.37.5",
@@ -77,8 +78,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.3.5",
-    "unist-util-inspect": "^7.0.0"
+    "typescript": "^4.3.5"
   },
   "peerDependencies": {
     "gatsby": ">=3.7.0",
