--- a/gatsby-theme-kibun/package.json
+++ b/gatsby-theme-kibun/package.json
@@ -31,6 +31,7 @@
     "hast-util-to-string": "^2.0.0",
     "hastscript": "^7.0.2",
     "js-yaml": "^4.1.0",
+    "katex": "^0.13.18",
     "mdast-util-definitions": "^5.1.0",
     "mdast-util-to-hast": "^11.2.0",
     "micromark": "^3.0.0",
@@ -40,9 +41,11 @@
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
     "refractor": "^4.1.1",
+    "rehype-katex": "^6.0.1",
     "rehype-raw": "^6.0.0",
     "rehype-react": "^7.0.0",
     "remark-definition-list": "^1.1.0",
+    "remark-math": "^5.1.0",
     "remark-parse": "^10.0.0",
     "remark-rehype": "^9.0.0",
     "sass": "^1.37.5",
