--- a/gatsby-theme-kibun/package.json
+++ b/gatsby-theme-kibun/package.json
@@ -58,6 +58,7 @@
   "devDependencies": {
     "@babel/cli": "^7.14.8",
     "@babel/plugin-transform-modules-commonjs": "^7.15.0",
+    "@lhci/cli": "^0.8.1",
     "@types/github-slugger": "^1.3.0",
     "@types/hast": "^2.3.2",
     "@types/jest": "^27.0.1",
