--- a/gatsby-theme-kibun/tsconfig.json
+++ b/gatsby-theme-kibun/tsconfig.json
@@ -5,6 +5,7 @@
   ],
   "compilerOptions": {
     "target": "esnext",
+    "module": "es2020",
     "jsx": "react",
     "strict": true,
     "noEmit": true,
