--- a/gatsby-theme-kibun/package.json
+++ b/gatsby-theme-kibun/package.json
@@ -31,6 +31,7 @@
     "gray-matter": "^4.0.3",
     "hast-util-to-string": "^2.0.0",
     "hastscript": "^7.0.2",
+    "import-meta-resolve": "^1.1.1",
     "js-yaml": "^4.1.0",
     "katex": "^0.13.18",
     "mdast-util-definitions": "^5.1.0",
