--- a/gatsby-theme-kibun/package.json
+++ b/gatsby-theme-kibun/package.json
@@ -48,7 +48,8 @@
     "rehype-raw": "^6.0.0",
     "rehype-react": "^7.0.0",
     "remark-definition-list": "^1.1.0",
-    "remark-gfm": "^2.0.0",
+    "remark-extended-table": "^1.0.0",
+    "remark-gfm": "^3.0.0",
     "remark-math": "^5.1.0",
     "remark-parse": "^10.0.0",
     "remark-rehype": "^9.0.0",
