--- a/gatsby-theme-kibun/package.json
+++ b/gatsby-theme-kibun/package.json
@@ -5,9 +5,11 @@
   "author": "Wataru Watanabe",
   "main": "index.js",
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.5",
+    "@mui/lab": "^5.0.0-alpha.53",
+    "@mui/material": "^5.0.6",
     "@octokit/core": "^3.5.1",
     "@octokit/plugin-rest-endpoint-methods": "^5.8.0",
     "@octokit/request-error": "^2.1.0",
@@ -21,7 +23,7 @@
     "cheerio": "^1.0.0-rc.10",
     "esm": "github:agoric-labs/esm#Agoric-built",
     "gatsby-plugin-image": "^2.0.0",
-    "gatsby-plugin-material-ui": "^3.0.1",
+    "gatsby-plugin-material-ui": "^4.0.3",
     "gatsby-plugin-react-helmet": "^5.0.0",
     "gatsby-plugin-sass": "^5.0.0",
     "gatsby-plugin-sharp": "^4.0.1",
