replace sidebar's scrollbar with overlayscrollbars

--- a/gatsby-theme-kibun/package.json
+++ b/gatsby-theme-kibun/package.json
@@ -15,6 +15,7 @@
     "@octokit/request-error": "^2.1.0",
     "@octokit/types": "^6.28.1",
     "@reduxjs/toolkit": "^1.6.1",
+    "@types/overlayscrollbars": "^1.12.1",
     "@types/react-helmet": "^6.1.2",
     "@types/unist": "^2.0.6",
     "assert": "^2.0.0",
@@ -53,6 +54,8 @@
     "remark-math": "^5.1.0",
     "remark-parse": "^10.0.0",
     "remark-rehype": "^9.0.0",
+    "overlayscrollbars": "^1.13.1",
+    "overlayscrollbars-react": "^0.2.3",
     "ts-node": "^10.2.0",
     "unified": "^10.1.0",
     "unist-util-visit": "^4.0.0"
