--- a/example/package.json
+++ b/example/package.json
@@ -13,14 +13,14 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "gatsby": "^4.0.2",
+    "gatsby": "~4.7.0",
     "gatsby-theme-kibun": "*",
-    "gatsby-plugin-sitemap": "^5.0.0",
-    "gatsby-plugin-manifest": "^4.0.0",
+    "gatsby-plugin-sitemap": "~5.7.0",
+    "gatsby-plugin-manifest": "~4.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "gatsby-plugin-webpack-bundle-analyser-v2": "1.1.25"
+    "gatsby-plugin-webpack-bundle-analyser-v2": "1.1.26"
   }
 }
