--- a/gatsby-theme-kibun/package.json
+++ b/gatsby-theme-kibun/package.json
@@ -22,13 +22,13 @@
     "buffer": "^6.0.3",
     "cheerio": "^1.0.0-rc.10",
     "esm": "github:agoric-labs/esm#Agoric-built",
-    "gatsby-plugin-image": "^2.0.0",
-    "gatsby-plugin-material-ui": "^4.0.3",
-    "gatsby-plugin-react-helmet": "^5.0.0",
-    "gatsby-plugin-sharp": "^4.0.1",
+    "gatsby-plugin-image": "~2.7.0",
+    "gatsby-plugin-material-ui": "^4.1.0",
+    "gatsby-plugin-react-helmet": "~5.7.0",
+    "gatsby-plugin-sharp": "~4.7.0",
     "gatsby-plugin-typegen": "^2.2.4",
-    "gatsby-source-filesystem": "^4.0.0",
-    "gatsby-transformer-sharp": "^4.0.0",
+    "gatsby-source-filesystem": "~4.7.0",
+    "gatsby-transformer-sharp": "~4.7.0",
     "github-slugger": "^1.3.0",
     "gray-matter": "^4.0.3",
     "hast-util-to-string": "^2.0.0",
@@ -76,13 +76,13 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.0.6",
     "babel-plugin-import": "^1.13.3",
-    "babel-preset-gatsby": "^2.0.0",
+    "babel-preset-gatsby": "^2.9.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-react": "^7.24.0",
     "gatsby": "4.0.2",
-    "gatsby-plugin-eslint": "^4.0.1",
+    "gatsby-plugin-eslint": "^4.0.2",
     "jest": "^27.0.6",
     "prettier": "2.3.2",
     "react": "^17.0.2",
@@ -91,7 +91,7 @@
     "typescript": "^4.3.5"
   },
   "peerDependencies": {
-    "gatsby": ">=4.0.0",
+    "gatsby": ">=4.7.0",
     "react": ">=17.0.0",
     "react-dom": ">=17.0.0"
   },
