--- a/gatsby-theme-kibun/package.json
+++ b/gatsby-theme-kibun/package.json
@@ -108,8 +108,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "typecheck": "tsc",
-    "lint": "eslint ./src/**/*.{ts,tsx,js,jsx}",
-    "lint-fix": "eslint --fix ./src/**/*.{ts,tsx,js,jsx} && prettier --write ./src/**/*.{ts,tsx,js,jsx}",
+    "lint": "eslint --max-warnings 0 ./src",
     "test": "jest"
   }
 }
