--- a/gatsby-theme-kibun/package.json
+++ b/gatsby-theme-kibun/package.json
@@ -39,6 +39,8 @@
     "mdast-util-definitions": "^5.1.0",
     "mdast-util-to-hast": "^12.1.1",
     "micromark": "^3.0.10",
+    "overlayscrollbars": "^1.13.1",
+    "overlayscrollbars-react": "^0.2.3",
     "path-browserify": "^1.0.1",
     "prismjs": "^1.27.0",
     "react-helmet": "^6.1.0",
@@ -54,8 +56,6 @@
     "remark-math": "^5.1.1",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
-    "overlayscrollbars": "^1.13.1",
-    "overlayscrollbars-react": "^0.2.3",
     "ts-node": "^10.7.0",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.0"
@@ -64,6 +64,7 @@
     "@babel/cli": "^7.17.6",
     "@babel/plugin-transform-modules-commonjs": "^7.16.8",
     "@lhci/cli": "^0.9.0",
+    "@testing-library/react": "^12.1.4",
     "@types/github-slugger": "^1.3.0",
     "@types/hast": "^2.3.4",
     "@types/jest": "^27.4.1",
@@ -83,6 +84,7 @@
     "eslint-plugin-react": "^7.29.3",
     "gatsby": "4.7.2",
     "gatsby-plugin-eslint": "^4.0.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "prettier": "2.5.1",
     "react": "^17.0.2",
