--- a/gatsby-theme-kibun/package.json
+++ b/gatsby-theme-kibun/package.json
@@ -64,6 +64,7 @@
     "@babel/cli": "^7.17.6",
     "@babel/plugin-transform-modules-commonjs": "^7.16.8",
     "@lhci/cli": "^0.9.0",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@types/github-slugger": "^1.3.0",
     "@types/hast": "^2.3.4",
