--- a/gatsby-theme-kibun/package.json
+++ b/gatsby-theme-kibun/package.json
@@ -66,6 +66,7 @@
     "@lhci/cli": "^0.9.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^14.2.0",
     "@types/github-slugger": "^1.3.0",
     "@types/hast": "^2.3.4",
     "@types/jest": "^27.4.1",
@@ -87,6 +88,7 @@
     "gatsby-plugin-eslint": "^4.0.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
+    "msw": "^0.40.2",
     "prettier": "2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
