--- a/gatsby-theme-kibun/package.json
+++ b/gatsby-theme-kibun/package.json
@@ -80,6 +80,7 @@
     "babel-jest": "^27.5.1",
     "babel-plugin-import": "^1.13.3",
     "babel-preset-gatsby": "^2.9.0",
+    "deepmerge": "^4.2.2",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.0",
@@ -93,7 +94,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "ts-jest": "^27.1.3",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "whatwg-fetch": "^3.6.2"
   },
   "peerDependencies": {
     "gatsby": ">=4.7.0",
